Fixes #30178 - User role with long name without spaces overlap to another column

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -329,6 +329,10 @@ table {
   white-space: nowrap;
 }
 
+.white-space-normal {
+  white-space: normal;
+}
+
 .fact-col {
   max-width: 500px;
   white-space: normal;
